// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OrderSummary mobile-heading stories snapshot > Collapsed story renders and matches snapshot 1`] = `
<div
  class="w-full border-b border-border"
  data-orientation="vertical"
  data-slot="accordion"
>
  <div
    class="last:border-b-0 border-b-0"
    data-orientation="vertical"
    data-slot="accordion-item"
    data-state="closed"
  >
    <h3
      class="flex"
      data-orientation="vertical"
      data-state="closed"
    >
      <button
        aria-controls="radix-«x»"
        aria-expanded="false"
        class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md text-left text-sm font-medium transition-all outline-none focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 px-[var(--cart-summary-px)] py-4 hover:no-underline"
        data-orientation="vertical"
        data-radix-collection-item=""
        data-slot="accordion-trigger"
        data-state="closed"
        id="radix-«x»"
        type="button"
      >
        <span
          class="flex-1 text-left text-sm font-semibold text-primary"
        >
          Estimated Total (3 items)
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
      </button>
    </h3>
    <div
      aria-labelledby="radix-«x»"
      class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
      data-orientation="vertical"
      data-slot="accordion-content"
      data-state="closed"
      hidden=""
      id="radix-«x»"
      role="region"
      style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
    />
  </div>
</div>
`;

exports[`OrderSummary mobile-heading stories snapshot > Expanded story renders and matches snapshot 1`] = `
<div
  class="w-full border-b border-border"
  data-orientation="vertical"
  data-slot="accordion"
>
  <div
    class="last:border-b-0 border-b-0"
    data-orientation="vertical"
    data-slot="accordion-item"
    data-state="open"
  >
    <h3
      class="flex"
      data-orientation="vertical"
      data-state="open"
    >
      <button
        aria-controls="radix-«x»"
        aria-expanded="true"
        class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md text-left text-sm font-medium transition-all outline-none focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 px-[var(--cart-summary-px)] py-4 hover:no-underline"
        data-orientation="vertical"
        data-radix-collection-item=""
        data-slot="accordion-trigger"
        data-state="open"
        id="radix-«x»"
        type="button"
      >
        <span
          class="flex-1 text-left text-sm font-semibold text-primary"
        >
          Estimated Total (3 items)
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
      </button>
    </h3>
    <div
      aria-labelledby="radix-«x»"
      class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
      data-orientation="vertical"
      data-slot="accordion-content"
      data-state="open"
      id="radix-«x»"
      role="region"
      style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width); transition-duration: 0s; animation-name: none;"
    >
      <div
        class="p-0"
      >
        <div
          class="bg-card text-card-foreground flex flex-col gap-6 border py-6 border-none !py-0 [--cart-summary-px:1rem] rounded-none shadow-none"
          data-slot="card"
        >
          <div
            class="px-[var(--cart-summary-px)]"
            data-slot="card-content"
          >
            <div
              class="space-y-4"
              data-testid="sf-order-summary"
            >
              <div
                aria-label="Order Summary"
                class="space-y-2"
                role="region"
              >
                <div
                  class="space-y-2 text-sm"
                >
                  <div
                    class="flex justify-between items-center"
                  >
                    <span>
                      Subtotal
                    </span>
                    <span>
                      £73.57
                    </span>
                  </div>
                  <div
                    class="flex justify-between items-center"
                  >
                    <div
                      class="flex items-center"
                    >
                      <span>
                        Shipping
                      </span>
                    </div>
                    <span
                      class="text-muted-foreground"
                    >
                      TBD
                    </span>
                  </div>
                  <div
                    class="flex justify-between items-center"
                  >
                    <span>
                      Tax
                    </span>
                    <span
                      class="text-muted-foreground"
                    >
                      TBD
                    </span>
                  </div>
                  <div
                    class="flex justify-between items-center"
                  >
                    <span
                      class="font-bold"
                    >
                      Estimated Total
                    </span>
                    <span
                      class="font-bold"
                    >
                      £73.57
                    </span>
                  </div>
                </div>
                <hr
                  class="mx-[calc(var(--cart-summary-px)*-1)] border-border"
                />
                <div
                  class="flex w-full flex-col gap-2 pt-2 pb-4"
                >
                  <div
                    class="mb-0"
                    data-orientation="vertical"
                    data-slot="accordion"
                  >
                    <div
                      class="border-b last:border-b-0"
                      data-orientation="vertical"
                      data-slot="accordion-item"
                      data-state="open"
                    >
                      <h3
                        class="flex"
                        data-orientation="vertical"
                        data-state="open"
                      >
                        <button
                          aria-controls="radix-«x»"
                          aria-expanded="true"
                          class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start rounded-md py-4 text-left text-sm font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 justify-start gap-2 pt-1 pb-0 [&>svg]:text-primary"
                          data-orientation="vertical"
                          data-radix-collection-item=""
                          data-slot="accordion-trigger"
                          data-state="open"
                          id="radix-«x»"
                          type="button"
                        >
                          <span
                            class="text-left text-sm font-medium text-primary"
                          >
                            Enter a Promotion Code
                          </span>
                          <svg
                            aria-hidden="true"
                            class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="m6 9 6 6 6-6"
                            />
                          </svg>
                        </button>
                      </h3>
                      <div
                        aria-labelledby="radix-«x»"
                        class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
                        data-orientation="vertical"
                        data-slot="accordion-content"
                        data-state="open"
                        id="radix-«x»"
                        role="region"
                        style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width); transition-duration: 0s; animation-name: none;"
                      >
                        <div
                          class="px-0 pt-2 pb-0"
                        >
                          <form
                            data-testid="promo-code-form"
                          >
                            <div
                              class="space-y-2"
                            >
                              <div
                                class="grid gap-2"
                                data-slot="form-item"
                              >
                                <label
                                  class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive sr-only"
                                  data-error="false"
                                  data-slot="form-label"
                                  for="_r_6_-form-item"
                                >
                                  Promo code
                                </label>
                                <div
                                  class="flex gap-2"
                                >
                                  <input
                                    aria-describedby="_r_6_-form-item-description"
                                    aria-invalid="false"
                                    class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-none focus-visible:ring-0"
                                    data-slot="form-control"
                                    id="_r_6_-form-item"
                                    name="code"
                                    placeholder="Promo code..."
                                    value=""
                                  />
                                  <button
                                    class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-secondary text-secondary-foreground hover:bg-secondary/80 h-9 py-2 has-[>svg]:px-3 rounded-none cursor-pointer px-4"
                                    data-size="default"
                                    data-slot="button"
                                    data-variant="secondary"
                                    type="submit"
                                  >
                                    Apply
                                  </button>
                                </div>
                              </div>
                            </div>
                          </form>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
